# SCR-Benchmarks

./: .env.example  .gitignore  CORPORA.md  LICENSE_  NOTICE  NOTICE_  README.md  config.yaml  pyproject.toml
corpora/nf-htan/: SUMMARY.md  corpus.yaml  schemas-urls
corpora/nf-htan/results/: runs.csv  runs.jsonl
corpora/nf-htan/results/raw/haiku/mcp/: mcp__a-exact-nf-biospecimen__haiku-4-5__rep1.json  mcp__a-exact-nf-biospecimen__haiku-4-5__rep2.json  mcp__a-exact-nf-biospecimen__haiku-4-5__rep3.json  mcp__b-ambiguous-disambiguates-to-biospecimen__haiku-4-5__rep1.json  mcp__b-ambiguous-disambiguates-to-biospecimen__haiku-4-5__rep2.json  mcp__b-ambiguous-disambiguates-to-biospecimen__haiku-4-5__rep3.json  mcp__c-foreign-financial__haiku-4-5__rep1.json  mcp__c-foreign-financial__haiku-4-5__rep2.json  mcp__c-foreign-financial__haiku-4-5__rep3.json  mcp__d-chimeric-nf-htan__haiku-4-5__rep1.json  mcp__d-chimeric-nf-htan__haiku-4-5__rep2.json  mcp__d-chimeric-nf-htan__haiku-4-5__rep3.json  mcp__e-underdetermined-nf-shared-identifiers__haiku-4-5__rep1.json  mcp__e-underdetermined-nf-shared-identifiers__haiku-4-5__rep2.json  mcp__e-underdetermined-nf-shared-identifiers__haiku-4-5__rep3.json
corpora/nf-htan/samples/: a_exact.json  b_ambiguous.json  c_foreign.json  d_chimeric.json  e_underdetermined_shared_identifiers.json
src/scr_bench/: __init__.py  cli.py  config.py  grader.py  metrics.py  persistence.py  plots.py  runner.py
src/scr_bench/tools/: __init__.py  bash_sandbox.py
src/scr_bench/variants/: __init__.py  mcp.py  url.py  zip.py
(+66 files in other folders)
