[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scr-bench"
version = "0.1.0"
description = "Benchmark harness for Structured Context Retrieval (SCR)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.55.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "matplotlib>=3.8",
]

[project.scripts]
scr-bench = "scr_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scr_bench"]
